# CallMonitor

./: .gitignore  CMakeLists.txt  README.md  build.sh  for_restart.sh  install.sh  main.cpp  nginx.conf  requirements.txt  start.sh  stop.sh
cmake/: libtorch.cmake
pmonitor_script/: alarm.sh  check.sh  include  start.sh  stop.sh
python_script/: access_test_call_monitor.py  access_test_heart_beat.py  count_the_time_cost_to_recognize_voicemail.py  load_update_stream_body_pkl.py  make_languages_to_skip_save_wav.py  mute_detect_evaluation.py  process_mute_detect_log.py  resolve_txt_wav_zip.py  resolve_wav_zip.py  shutil_move_wav.py  shutil_move_wav_with_callbot.py  shutil_move_wav_with_model.py  task_beep_detect.py  txt_wav_zip.py  wav_files_to_zip.py
script/: install_openssl.sh
server/call_monitor_server/: call_monitor_server.cpp  call_monitor_server.h  settings.cpp  settings.h
server/call_monitor_server/control/: heart_beat.cpp  heart_beat.h  ping_pong.cpp  ping_pong.h  update_stream.cpp  update_stream.h
server/call_monitor_server/json_config/: cnn_voicemail_language_to_model.json  languages_to_skip_save_wav.json  mute_detect_json_config.json  scene_id_to_language.json  sence_id_to_language.json  voice_detect_json_config.json  voicemail.json
server/test_server/: test_server.h
toolbox/dsp/: fbank.h  fft.h
toolbox/hashlib/: CMakeLists.txt
toolbox/utils/: base64.h  wav.h
unittest/: unittest_beep_detect.py  unittest_cnn_voicemail.py  unittest_locust.py  unittest_model.py  unittest_mute_detect.py  unittest_pingpong.py  unittest_voice_detect.py
(+16 files in other folders)
